--- a/src/main/webapp/resources/bill/inwardBillPrintPos.xhtml
+++ b/src/main/webapp/resources/bill/inwardBillPrintPos.xhtml
@@ -254,7 +254,7 @@
             <div  >
 
                 <table style="width: 100%;" >
-                    <h:panelGroup rendered="#{(webUserController.hasPrivilege('ShowInwardFee'))}">
+<!--                    <h:panelGroup rendered="#{(webUserController.hasPrivilege('ShowInwardFee'))}">
                         <tr >
                             <td class="totalsBlock" style="text-align: left; width: 60%;">
                                 <h:outputLabel value="Actual Total"  />
@@ -276,7 +276,7 @@
                                 </h:outputLabel>
                             </td>
                         </tr> 
-                    </h:panelGroup>
+                    </h:panelGroup>-->
                     <tr>
                         <td  class="totalsBlock" style="text-align: left;">
                             <h:outputLabel   value="Number of Items Count" />
