--- a/src/main/webapp/inward/bht_deposit_by_created_date_not_discharge.xhtml
+++ b/src/main/webapp/inward/bht_deposit_by_created_date_not_discharge.xhtml
@@ -144,12 +144,11 @@
                                     </h:outputLabel>
                                 </p:column>
 
-                                <p:column headerText="Reciept No">
+                                <p:column headerText="Payment Methord">
                                     <f:facet name="header">
-                                        <h:outputLabel value="Reciept No"/>
-                                    </f:facet>                                    
-                                    <h:outputLabel  >
-                                    </h:outputLabel>
+                                        <h:outputLabel value="Payment Methord"/>
+                                    </f:facet>
+                                    <h:outputLabel value="#{i.paymentMethod.label}" ></h:outputLabel>
                                 </p:column>
 
                                 <p:column headerText="Amount" style="text-align: right;">
@@ -181,6 +180,7 @@
                                                     <f:convertNumber pattern="#,##0.00"></f:convertNumber></p:outputLabel>
                                             </f:facet>
                                         </p:column>
+                                        <p:column ></p:column>
 
                                     </p:row>
 
@@ -221,12 +221,11 @@
                                     </h:outputLabel>
                                 </p:column>
 
-                                <p:column headerText="Reciept No">
+                                <p:column headerText="Payment Methord">
                                     <f:facet name="header">
-                                        <h:outputLabel value="Reciept No"/>
-                                    </f:facet>                                    
-                                    <h:outputLabel  >
-                                    </h:outputLabel>
+                                        <h:outputLabel value="Payment Methord"/>
+                                    </f:facet>
+                                    <h:outputLabel value="#{can.paymentMethod.label}" ></h:outputLabel>
                                 </p:column>
 
                                 <p:column headerText="Amount" style="text-align: right;">
@@ -259,6 +258,7 @@
                                                 </p:outputLabel>
                                             </f:facet>
                                         </p:column>
+                                        <p:column ></p:column>
 
                                     </p:row>
 
@@ -300,12 +300,11 @@
                                     </h:outputLabel>
                                 </p:column>
 
-                                <p:column headerText="Reciept No">
+                                <p:column headerText="Payment Methord">
                                     <f:facet name="header">
-                                        <h:outputLabel value="Reciept No"/>
-                                    </f:facet>                                    
-                                    <h:outputLabel  >
-                                    </h:outputLabel>
+                                        <h:outputLabel value="Payment Methord"/>
+                                    </f:facet>
+                                    <h:outputLabel value="#{ref.paymentMethod.label}" ></h:outputLabel>
                                 </p:column>
 
                                 <p:column headerText="Amount" style="text-align: right;">
@@ -338,6 +337,7 @@
                                                 </p:outputLabel>
                                             </f:facet>
                                         </p:column>
+                                        <p:column/>
 
                                     </p:row>
 
