--- a/src/main/webapp/reportInstitution/report_cash_category_without_pro_day.xhtml
+++ b/src/main/webapp/reportInstitution/report_cash_category_without_pro_day.xhtml
@@ -61,13 +61,12 @@
                                          opd_professional_credit:opd_professional_credit,
                                          inward_professional:inward_professional,
                                          credit_card:credit_card,
+                                         online_settlement:online_settlement,
                                          slip:slip,
                                          cheque:cheque,
                                          finalSum,
                                          bnkDeposit,
-                                         
                                          opd_new_credit:opd_new_credit"
-
                                          fileName="Book_Keeping_Summery_without_pro_day_by_category_dat_end"
                                          facetFontStyle="BOLD"   cellFontStyle="NORMAL"  
                                          fontName="Courier New"  />
@@ -208,7 +207,10 @@
             <p:spacer height="30"/>
 
             <in:credit_card_bills id="credit_card"/>
+            
+            <p:spacer height="30"/>
 
+            <in:online_settlement_bills id="online_settlement"/>
 
             <p:spacer height="30"/>
 
