--- a/src/main/webapp/inward/all_payment_by_created_date_discharged_only.xhtml
+++ b/src/main/webapp/inward/all_payment_by_created_date_discharged_only.xhtml
@@ -137,11 +137,11 @@
                                     </h:outputLabel>
                                 </p:column>
 
-                                <p:column headerText="Reciept No">
+                                <p:column >
                                     <f:facet name="header">
-                                        <h:outputLabel value="Reciept No"/>
+                                        <h:outputLabel value="Payment Method"/>
                                     </f:facet>                                    
-                                    <h:outputLabel  >
+                                    <h:outputLabel value="#{i.paymentMethod.label}"  >
                                     </h:outputLabel>
                                 </p:column>
 
@@ -149,7 +149,8 @@
                                     <f:facet name="header">
                                         <h:outputLabel value="Amount"/>
                                     </f:facet>                                    
-                                    <h:outputLabel  value="#{i.netTotal}">
+                                    <h:outputLabel  value="#{i.netTotal}" style="float: right">
+                                        <f:convertNumber pattern="#,##0.00" />
                                     </h:outputLabel>
                                 </p:column>
 
@@ -175,6 +176,7 @@
 
                                             </f:facet>
                                         </p:column>
+                                        <p:column />
 
                                     </p:row>
 
@@ -215,11 +217,11 @@
                                     </h:outputLabel>
                                 </p:column>
 
-                                <p:column headerText="Reciept No">
+                                <p:column >
                                     <f:facet name="header">
-                                        <h:outputLabel value="Reciept No"/>
+                                        <h:outputLabel value="Payment Method"/>
                                     </f:facet>                                    
-                                    <h:outputLabel  >
+                                    <h:outputLabel value="#{can.paymentMethod.label}"  >
                                     </h:outputLabel>
                                 </p:column>
 
@@ -227,7 +229,8 @@
                                     <f:facet name="header">
                                         <h:outputLabel value="Amount"/>
                                     </f:facet>                                    
-                                    <h:outputLabel  value="#{can.netTotal}">
+                                    <h:outputLabel  value="#{can.netTotal}" style="float: right">
+                                        <f:convertNumber pattern="#,##0.00" />
                                     </h:outputLabel>
                                 </p:column>
 
@@ -251,6 +254,7 @@
                                                 </p:outputLabel>
                                             </f:facet>
                                         </p:column>
+                                        <p:column />
 
                                     </p:row>
 
@@ -292,11 +296,11 @@
                                     </h:outputLabel>
                                 </p:column>
 
-                                <p:column headerText="Reciept No">
+                                <p:column >
                                     <f:facet name="header">
-                                        <h:outputLabel value="Reciept No"/>
+                                        <h:outputLabel value="Payment Method"/>
                                     </f:facet>                                    
-                                    <h:outputLabel  >
+                                    <h:outputLabel value="#{ref.paymentMethod.label}"  >
                                     </h:outputLabel>
                                 </p:column>
 
@@ -304,7 +308,8 @@
                                     <f:facet name="header">
                                         <h:outputLabel value="Amount"/>
                                     </f:facet>                                    
-                                    <h:outputLabel  value="#{ref.netTotal}">
+                                    <h:outputLabel  value="#{ref.netTotal}" style="float: right">
+                                        <f:convertNumber pattern="#,##0.00" />
                                     </h:outputLabel>
                                 </p:column>
 
@@ -328,6 +333,7 @@
                                                 </p:outputLabel>
                                             </f:facet>
                                         </p:column>
+                                        <p:column />
 
                                     </p:row>
 
@@ -338,21 +344,25 @@
 
                             <p:panelGrid columns="2" styleClass="noBorder normalFont">
                                 <p:outputLabel value="Net Bill Total"/>
-                                <p:outputLabel value="#{mdInwardReportController.totalValue}">
-                                    <f:convertNumber pattern="#000.00"></f:convertNumber></p:outputLabel>
+                                <p:outputLabel value="#{mdInwardReportController.totalValue}" style="float: right">
+                                    <f:convertNumber pattern="#,##0.00" />
+                                </p:outputLabel>
 
                                 <p:outputLabel value="Net Cancel Bill Total"/>
-                                <p:outputLabel value="#{mdInwardReportController.cancelledTotal}">
-                                    <f:convertNumber pattern="#000.00"></f:convertNumber></p:outputLabel>
+                                <p:outputLabel value="#{mdInwardReportController.cancelledTotal}" style="float: right">
+                                    <f:convertNumber pattern="#,##0.00" />
+                                </p:outputLabel>
 
                                 <p:outputLabel value="Net Refund Bill Total"/>
-                                <p:outputLabel value="#{mdInwardReportController.refundTotal}">
-                                    <f:convertNumber pattern="#000.00"></f:convertNumber></p:outputLabel>
+                                <p:outputLabel value="#{mdInwardReportController.refundTotal}" style="float: right">
+                                    <f:convertNumber pattern="#,##0.00" />
+                                </p:outputLabel>
                                 <p:outputLabel value="Net Total"/>
                                 <p:outputLabel value="#{mdInwardReportController.totalValue
                                                         +mdInwardReportController.refundTotal
-                                                        +mdInwardReportController.cancelledTotal}">
-                                    <f:convertNumber pattern="#000.00"></f:convertNumber></p:outputLabel>
+                                                        +mdInwardReportController.cancelledTotal}" style="float: right">
+                                    <f:convertNumber pattern="#,##0.00" />
+                                </p:outputLabel>
                             </p:panelGrid>
 
 
