--- a/src/main/webapp/inward/bht_deposit_by_created_date_discharged_all.xhtml
+++ b/src/main/webapp/inward/bht_deposit_by_created_date_discharged_all.xhtml
@@ -150,19 +150,19 @@
                                     </h:outputLabel>
                                 </p:column>
 
-                                <p:column headerText="Reciept No">
+                                <p:column>
                                     <f:facet name="header">
-                                        <h:outputLabel value="Reciept No"/>
+                                        <h:outputLabel value="Payment Methord"/>
                                     </f:facet>                                    
-                                    <h:outputLabel  >
-                                    </h:outputLabel>
+                                    <h:outputLabel value="#{i.paymentMethod.label}" />
                                 </p:column>
 
                                 <p:column headerText="Amount">
                                     <f:facet name="header">
                                         <h:outputLabel value="Amount"/>
                                     </f:facet>                                    
-                                    <h:outputLabel  value="#{i.netTotal}">
+                                    <h:outputLabel  value="#{i.netTotal}" style="float: right">
+                                        <f:convertNumber pattern="#,##0.00"/>
                                     </h:outputLabel>
                                 </p:column>
 
@@ -183,7 +183,7 @@
                                             <f:facet name="footer">
 
                                                 <p:outputLabel value="#{mdInwardReportController.totalValue}">
-                                                    <f:convertNumber pattern="#,000.00"/>
+                                                    <f:convertNumber pattern="#,##0.00"/>
                                                 </p:outputLabel>
 
                                             </f:facet>
@@ -246,19 +246,19 @@
                                     </h:outputLabel>
                                 </p:column>
 
-                                <p:column headerText="Reciept No">
+                                <p:column>
                                     <f:facet name="header">
-                                        <h:outputLabel value="Reciept No"/>
+                                        <h:outputLabel value="Payment Methord"/>
                                     </f:facet>                                    
-                                    <h:outputLabel  >
-                                    </h:outputLabel>
+                                    <h:outputLabel value="#{can.paymentMethod.label}" />
                                 </p:column>
 
                                 <p:column headerText="Amount">
                                     <f:facet name="header">
                                         <h:outputLabel value="Amount"/>
                                     </f:facet>                                    
-                                    <h:outputLabel  value="#{can.netTotal}">
+                                    <h:outputLabel  value="#{can.netTotal}" style="float: right">
+                                        <f:convertNumber pattern="#,##0.00"/>
                                     </h:outputLabel>
                                 </p:column>
 
@@ -274,14 +274,15 @@
 
                                     <p:row>
 
-                                        <p:column colspan="6" footerText="Total"></p:column>
+                                        <p:column colspan="7" footerText="Total"></p:column>
                                         <p:column footerText="#{mdInwardReportController.cancelledTotal}" style="text-align: right">
                                             <f:facet name="footer">
                                                 <p:outputLabel value="#{mdInwardReportController.cancelledTotal}">
-                                                    <f:convertNumber pattern="#,000.00"></f:convertNumber>
+                                                    <f:convertNumber pattern="#,##0.00"/>
                                                 </p:outputLabel>
                                             </f:facet>
                                         </p:column>
+                                        <p:column />
 
                                     </p:row>
 
@@ -340,19 +341,19 @@
                                     </h:outputLabel>
                                 </p:column>
 
-                                <p:column headerText="Reciept No">
+                                <p:column>
                                     <f:facet name="header">
-                                        <h:outputLabel value="Reciept No"/>
+                                        <h:outputLabel value="Payment Methord"/>
                                     </f:facet>                                    
-                                    <h:outputLabel  >
-                                    </h:outputLabel>
+                                    <h:outputLabel value="#{ref.paymentMethod.label}" />
                                 </p:column>
 
                                 <p:column headerText="Amount">
                                     <f:facet name="header">
                                         <h:outputLabel value="Amount"/>
                                     </f:facet>                                    
-                                    <h:outputLabel  value="#{ref.netTotal}">
+                                    <h:outputLabel  value="#{ref.netTotal}" style="float: right">
+                                        <f:convertNumber pattern="#,##0.00"/>
                                     </h:outputLabel>
                                 </p:column>
 
@@ -368,14 +369,15 @@
 
                                     <p:row>
 
-                                        <p:column colspan="6" footerText="Total"></p:column>
+                                        <p:column colspan="7" footerText="Total"></p:column>
                                         <p:column footerText="#{mdInwardReportController.refundTotal}" style="text-align: right">
                                             <f:facet name="footer">
                                                 <p:outputLabel value="#{mdInwardReportController.refundTotal}">
-                                                    <f:convertNumber pattern="#,000.00"></f:convertNumber>
+                                                    <f:convertNumber pattern="#,##0.00"/>
                                                 </p:outputLabel>
                                             </f:facet>
                                         </p:column>
+                                        <p:column />
 
                                     </p:row>
 
