--- a/src/main/webapp/inward/bht_deposit_of_admitted_patient.xhtml
+++ b/src/main/webapp/inward/bht_deposit_of_admitted_patient.xhtml
@@ -100,19 +100,19 @@
                                     </h:outputLabel>
                                 </p:column>
 
-                                <p:column headerText="Reciept No">
+                                <p:column headerText="Payment Methord">
                                     <f:facet name="header">
-                                        <h:outputLabel value="Reciept No"/>
-                                    </f:facet>                                    
-                                    <h:outputLabel  >
-                                    </h:outputLabel>
+                                        <h:outputLabel value="Payment Methord"/>
+                                    </f:facet>
+                                    <h:outputLabel value="#{i.paymentMethod.label}" ></h:outputLabel>
                                 </p:column>
 
                                 <p:column headerText="Amount">
                                     <f:facet name="header">
                                         <h:outputLabel value="Amount"/>
                                     </f:facet>                                    
-                                    <h:outputLabel  value="#{i.netTotal}">
+                                    <h:outputLabel  value="#{i.netTotal}" style="float: right">
+                                        <f:convertNumber pattern="#,##0.00" />
                                     </h:outputLabel>
                                 </p:column>
 
@@ -132,9 +132,10 @@
                                         <p:column footerText="#{mdInwardReportController.totalValue}" style="text-align: right">
                                             <f:facet name="footer">
                                                 <p:outputLabel value="#{mdInwardReportController.totalValue}">
-                                                    <f:convertNumber pattern="#,000.00"></f:convertNumber></p:outputLabel>
+                                                    <f:convertNumber pattern="#,##0.00"></f:convertNumber></p:outputLabel>
                                             </f:facet>
                                         </p:column>
+                                        <p:column />
 
                                     </p:row>
 
@@ -175,19 +176,19 @@
                                     </h:outputLabel>
                                 </p:column>
 
-                                <p:column headerText="Reciept No">
+                                <p:column headerText="Payment Methord">
                                     <f:facet name="header">
-                                        <h:outputLabel value="Reciept No"/>
-                                    </f:facet>                                    
-                                    <h:outputLabel  >
-                                    </h:outputLabel>
+                                        <h:outputLabel value="Payment Methord"/>
+                                    </f:facet>
+                                    <h:outputLabel value="#{can.paymentMethod.label}" ></h:outputLabel>
                                 </p:column>
 
                                 <p:column headerText="Amount">
                                     <f:facet name="header">
                                         <h:outputLabel value="Amount"/>
                                     </f:facet>                                    
-                                    <h:outputLabel  value="#{can.netTotal}">
+                                    <h:outputLabel  value="#{can.netTotal}" style="float: right">
+                                        <f:convertNumber pattern="#,##0.00" />
                                     </h:outputLabel>
                                 </p:column>
 
@@ -207,10 +208,11 @@
                                         <p:column footerText="#{mdInwardReportController.cancelledTotal}" style="text-align: right">
                                             <f:facet name="footer">
                                                 <p:outputLabel value="#{mdInwardReportController.cancelledTotal}">
-                                                    <f:convertNumber pattern="#,000.00"></f:convertNumber>
+                                                    <f:convertNumber pattern="#,##0.00"></f:convertNumber>
                                                 </p:outputLabel>
                                             </f:facet>
                                         </p:column>
+                                        <p:column />
 
                                     </p:row>
 
@@ -252,19 +254,19 @@
                                     </h:outputLabel>
                                 </p:column>
 
-                                <p:column headerText="Reciept No">
+                                <p:column headerText="Payment Methord">
                                     <f:facet name="header">
-                                        <h:outputLabel value="Reciept No"/>
-                                    </f:facet>                                    
-                                    <h:outputLabel  >
-                                    </h:outputLabel>
+                                        <h:outputLabel value="Payment Methord"/>
+                                    </f:facet>
+                                    <h:outputLabel value="#{ref.paymentMethod.label}" ></h:outputLabel>
                                 </p:column>
 
                                 <p:column headerText="Amount">
                                     <f:facet name="header">
                                         <h:outputLabel value="Amount"/>
                                     </f:facet>                                    
-                                    <h:outputLabel  value="#{ref.netTotal}">
+                                    <h:outputLabel  value="#{ref.netTotal}" style="float: right">
+                                        <f:convertNumber pattern="#,##0.00" />
                                     </h:outputLabel>
                                 </p:column>
 
@@ -284,10 +286,11 @@
                                         <p:column footerText="#{mdInwardReportController.refundTotal}" style="text-align: right">
                                             <f:facet name="footer">
                                                 <p:outputLabel value="#{mdInwardReportController.refundTotal}">
-                                                    <f:convertNumber pattern="#,000.00"></f:convertNumber>
+                                                    <f:convertNumber pattern="#,##0.00"></f:convertNumber>
                                                 </p:outputLabel>
                                             </f:facet>
                                         </p:column>
+                                        <p:column />
 
                                     </p:row>
 
@@ -298,16 +301,16 @@
 
                             <p:panelGrid columns="2" styleClass="noBorder normalFont">
                                 <p:outputLabel value="Net Bill Total"/>
-                                <p:outputLabel value="#{mdInwardReportController.totalValue}">
-                                    <f:convertNumber pattern="#000.00"></f:convertNumber></p:outputLabel>
+                                <p:outputLabel value="#{mdInwardReportController.totalValue}" style="float: right">
+                                    <f:convertNumber pattern="#,##0.00"></f:convertNumber></p:outputLabel>
 
                                 <p:outputLabel value="Net Cancel Bill Total"/>
-                                <p:outputLabel value="#{mdInwardReportController.cancelledTotal}">
-                                    <f:convertNumber pattern="#000.00"></f:convertNumber></p:outputLabel>
+                                <p:outputLabel value="#{mdInwardReportController.cancelledTotal}" style="float: right">
+                                    <f:convertNumber pattern="#,##0.00"></f:convertNumber></p:outputLabel>
 
                                 <p:outputLabel value="Net Refund Bill Total"/>
-                                <p:outputLabel value="#{mdInwardReportController.refundTotal}">
-                                    <f:convertNumber pattern="#000.00"></f:convertNumber></p:outputLabel>
+                                <p:outputLabel value="#{mdInwardReportController.refundTotal}" style="float: right">
+                                    <f:convertNumber pattern="#,##0.00"></f:convertNumber></p:outputLabel>
                             </p:panelGrid>
 
 
